--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@sanity/default-login": "^2.7.0",
     "@sanity/desk-tool": "^2.7.4",
     "@sanity/vision": "^2.7.4",
+    "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-youtube": "^7.13.1"
   },
   "devDependencies": {}
 }
